# kbase-transfers

./: README.md  pyproject.toml
.github/workflows/: tests.yml
kbase_transfers/: __init__.py  descriptor_validator.py  minio_client.py
scripts/nayfach_2020/: README.md  download_and_load.py
scripts/ncbi/: README.md  download_genomes.py  list_of_accessions_x86clades.txt  minio_client.py  minio_client_test.py  requirements.txt  run_tests.sh  setup_venv.sh
scripts/spire/: README.md  create_descriptor.py
tests/: test_descriptor_validator.py  test_minio_client.py  test_nayfach_integration.py  test_ncbi_integration.py
tests/assets/: ncbi_test_accessions.txt
