[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbase-transfers"
version = "0.1.0"
description = "Data transfer scripts for KBase Lakehouse"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "KBase Team"}
]
dependencies = [
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["kbase_transfers*"]
exclude = ["scripts*", "tests*"]
