[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbase-transfers"
version = "0.1.0"
description = "Data transfer scripts for KBase Lakehouse"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "KBase Team"}
]
dependencies = [
    "boto3>=1.26.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["kbase_transfers*"]
exclude = ["scripts*", "tests*"]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
